# local-coding-agent-harness

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
agent/: context.py  factory.py  loop.py  messages.py  model_client.py  prompts.py
cli/: commands.py  main.py
examples/demo_repo/app/: __init__.py
examples/demo_repo/tests/: test_calculator.py
runtime/: __init__.py  access_policy.py  artifact_store.py  bootstrap.py  context_manager.py  cost_tracker.py  default_hooks.py  diff_manager.py  errors.py  executor.py  hooks.py  operation.py  permission.py  permission_rules.py  readable_trace_writer.py  recovery.py  report_writer.py  sandbox.py  trace_logger.py
tests/: test_cli_prompt.py  test_context_manager.py  test_cost_tracker.py  test_diff_manager.py  test_edit_file_tool.py  test_interactive_state.py  test_permission_runtime.py  test_read_file_tool.py  test_readable_trace_writer.py  test_recovery_policy.py  test_run_abort_artifacts.py  test_sandbox_runtime.py  test_tool_executor.py  test_verification_result.py  test_view_diff_tool.py
tools/: __init__.py  base.py  bash.py  create_file.py  edit_file.py  grep.py  list_dir.py  read_file.py  registry.py  view_diff.py
