[project]
name = "local-coding-agent-harness"
version = "0.1.0"
description = "A controlled local coding agent runtime for repositories."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
lcah = "cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["examples/demo_repo/tests"]

